refactor: cratePayment Valid 추가